; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tcpdump/extr_print-pptp.c_pptp_stopccrp_print.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tcpdump/extr_print-pptp.c_pptp_stopccrp_print.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pptp_msg_stopccrp = type { i32, i32, i32 }

@PPTP_CTRL_MSG_TYPE_StopCCRP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@tstr = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @pptp_stopccrp_print to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pptp_stopccrp_print(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.pptp_msg_stopccrp*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = bitcast i32* %6 to %struct.pptp_msg_stopccrp*
  store %struct.pptp_msg_stopccrp* %7, %struct.pptp_msg_stopccrp** %5, align 8
  %8 = load %struct.pptp_msg_stopccrp*, %struct.pptp_msg_stopccrp** %5, align 8
  %9 = getelementptr inbounds %struct.pptp_msg_stopccrp, %struct.pptp_msg_stopccrp* %8, i32 0, i32 2
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @ND_TCHECK(i32 %10)
  %12 = load i32*, i32** %3, align 8
  %13 = load %struct.pptp_msg_stopccrp*, %struct.pptp_msg_stopccrp** %5, align 8
  %14 = getelementptr inbounds %struct.pptp_msg_stopccrp, %struct.pptp_msg_stopccrp* %13, i32 0, i32 2
  %15 = load i32, i32* @PPTP_CTRL_MSG_TYPE_StopCCRP, align 4
  %16 = call i32 @pptp_result_code_print(i32* %12, i32* %14, i32 %15)
  %17 = load %struct.pptp_msg_stopccrp*, %struct.pptp_msg_stopccrp** %5, align 8
  %18 = getelementptr inbounds %struct.pptp_msg_stopccrp, %struct.pptp_msg_stopccrp* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @ND_TCHECK(i32 %19)
  %21 = load i32*, i32** %3, align 8
  %22 = load %struct.pptp_msg_stopccrp*, %struct.pptp_msg_stopccrp** %5, align 8
  %23 = getelementptr inbounds %struct.pptp_msg_stopccrp, %struct.pptp_msg_stopccrp* %22, i32 0, i32 1
  %24 = call i32 @pptp_err_code_print(i32* %21, i32* %23)
  %25 = load %struct.pptp_msg_stopccrp*, %struct.pptp_msg_stopccrp** %5, align 8
  %26 = getelementptr inbounds %struct.pptp_msg_stopccrp, %struct.pptp_msg_stopccrp* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @ND_TCHECK(i32 %27)
  br label %35

29:                                               ; No predecessors!
  %30 = load i32*, i32** %3, align 8
  %31 = load i32, i32* @tstr, align 4
  %32 = sext i32 %31 to i64
  %33 = inttoptr i64 %32 to i32*
  %34 = call i32 @ND_PRINT(i32* %33)
  br label %35

35:                                               ; preds = %29, %2
  ret void
}

declare dso_local i32 @ND_TCHECK(i32) #1

declare dso_local i32 @pptp_result_code_print(i32*, i32*, i32) #1

declare dso_local i32 @pptp_err_code_print(i32*, i32*) #1

declare dso_local i32 @ND_PRINT(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
